# stm32f103-aircraft

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: AI协助.md  Archlinux环境搭建.md  Defmt单元测试.md  元器件清单.md  引脚配置表.md  硬件介绍.md  飞行器设计文档.md
src/: config.rs  lib.rs  main.rs
src/hardware/: delay.rs  key.rs  led.rs  mod.rs  mpu6050.rs  nrf24l01.rs  pid.rs  tb6612fng.rs  timer.rs
src/hardware/oled/: mod.rs  simple.rs  utils.rs
src/hardware/usart/: mod.rs  utils.rs
src/oled/: utils.rs
src/sensor/: mod.rs  mpu6050.rs
