[package]
name = "stm32f103-uav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
harness = false

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
rtic = {version = "2.0.1", features = ["thumbv7-backend"]}
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
nb = "1.1.0"
# 6轴姿态传感器
mpu6050 = "0.1.6"

[dev-dependencies]
defmt-test = "0.3.1"
