[package]
name = "stm32f103-aircraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
harness = false

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
stm32f1xx-hal = {version = "0.10.0", features = ["rt", "stm32f103", "medium"]}
rtic = {version = "2.0.1", features = ["thumbv7-backend"]}
rtic-sync = "1.0.2"
# rtic-monotonics = {version = "1.0.0", features = ["cortex-m-systick"]}
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
nb = "1.1.0"
unwrap-infallible = "0.1.5"
heapless = "0.8.0"
# 6轴姿态传感器
mpu6050 = "0.1.6"
# SPI - 2.4 GHz 无线通信
embedded-nrf24l01 = "0.2.0"
libm="0.2.8"

[dev-dependencies]
defmt-test = "0.3.1"


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false
